--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -18,6 +18,32 @@ knitr::opts_chunk$set(
 library(StatComp21049)
 ```
 
+# Simple use
+
+```{.r}
+library(StatComp21049)
+## basic example code
+
+data("curve_data", "time_Elapsed", "w")
+## you can use your data to Proceed to the steps below
+rec <- Downsample(time_Elapsed, curve_data, 16)
+time_downsampled <- rec$time_downsampled
+data_downsampled <- rec$data_downsampled
+ev <- Get_Matrix_Eigens(data_downsampled)
+eigenvalues <- ev$values
+eigenvectors <- ev$vectors
+PCAmode <- 5
+K_delay <- 12
+Xeigenvector <- eigenvectors[, 1:PCAmode]
+X_PCA <- data_downsampled %*% Xeigenvector
+test_CurveFilter_embeddingdelay <- Embedding_delay(X_PCA, PCAmode, K_delay)
+X <- test_CurveFilter_embeddingdelay %*% w
+## Plot the projection
+plot(X[, 3], X[, 4], type = "l")
+plot(X[, 6], X[, 7], type = "l")
+```
+
+
 # The Guide to my functions
 
 
@@ -25,6 +51,8 @@ library(StatComp21049)
 
 
 ## Get_Matrix_Eigens
+
+
 
 ## Downsample
 
@@ -70,6 +98,3 @@ We use it to downsample data
 
 ```
 
-# test
-
-# test
