--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -26,6 +26,27 @@ library(StatComp21049)
 ![](https://cdn.jsdelivr.net/gh/RongkangXiong/pic-bed/blog/img/202112201851366.png)
 
 
+# Prepare the data
+I use `/data-raw/DATASET.R` to transform the raw-data into data
+```
+## code to prepare `DATASET` dataset goes here
+# batch_deseq ------------------------------------------------------------------
+
+curve_data <- read.csv("data-raw/curve_data.csv", header = FALSE)
+curve_data <- data.matrix(curve_data) # 将dataframe转换为矩阵
+
+time_Elapsed <- read.csv("data-raw/TimeElapsed.csv", header = FALSE)
+time_Elapsed <- time_Elapsed$V1
+
+w <- read.csv("data-raw/w.csv", header = FALSE)
+w <- data.matrix(w)
+w <- t(w)
+
+usethis::use_data(curve_data, compress = "xz", overwrite = TRUE)
+usethis::use_data(time_Elapsed, compress = "xz", overwrite = TRUE)
+usethis::use_data(w, compress = "xz", overwrite = TRUE)
+```
+
 
 # Simple use
 
@@ -105,6 +126,11 @@ Get_Matrix_Eigens <- function(X) {
   return(ev)
 }
 ```
+
+## Get_Matrix_Dimension
+
+$dim = \frac{(\lambda_i)^2}{\sum_{i} \lambda_i^2}, \lambda_i$ is the eigenvalue of the matrix.
+
 
 ## Embedding_delay
 This is the function to delay the data matrix
